--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	My projects
 	<div class="hover-box" href="#beerylis" onclick="Show('beerylis')"><a>Beerylis</a></div>
 	<div class="hover-box" href="#pyrite" onclick="Show('pyrite')"><a>Pyrite Engine</a></div>
-	<div class="hover-box" href="#snakepy" onclick="Show('snakepy')"><a>Snake.py</a></div>
+	<div class="hover-box" href="#snakepy" onclick="Show('snake')"><a>Snake.py</a></div>
 	Projects I've worked on
 	<div class="hover-box" href="#geckoparty" onclick="Show('geckoparty')"><a>Gecko Party</a></div>
 	<div class="hover-box" href="#stellaria" onclick="Show('stellaria')"><a>Stellaria</a></div>
@@ -46,9 +46,9 @@
 	<div class="window hidden" id="socials" title="Social Media">
 		<div class="window-button window-close" onclick="Hide('socials')">X</div>
 		<p>
-			<div>GitHub</div>
-			<div>Itch.io</div>
-			<div>Linked In</div>
+			<div><a href="https://github.com/SumishiM" target="_blank">GitHub</a></div>
+			<div><a href="https://sumishi.itch.io/" target="_blank">Itch.io</a></div>
+			<div><a href="https://www.linkedin.com/in/hugo-michel-sumishi/" target="_blank">LinkedIn</a></div>
 			<div>Instagram</div>
 			<div>Twitter</div>
 			<div>Discord</div>
@@ -81,7 +81,7 @@
 		<div>
 			Programming languages :
 			<!-- Use images with tooltip -->
-			C++ / C# / HTML / CSS / JavaScript
+			C++ / C# / Lua / HTML / CSS / JavaScript
 		</div>
 		<div>
 			Game engines :
@@ -95,7 +95,7 @@
 		</div>
 	</div>
 
-	<!-- Skills -->
+	<!-- Game dev -->
 	<div class="window hidden" id="gamedev" title="Game dev">
 		<div class="window-button window-close" onclick="Hide('gamedev')">X</div>
 		I studied game developement at Creajeux for 4 years 
@@ -142,13 +142,14 @@
 			A classic snake game made for a class project in 2 weeks
 		</p>
 		<!-- itch io link -->
+		<div><a href="https://sumishi.itch.io/snakepy" target="_blank">Itch.io</a></div>
 	</div>
 
 	<!-- Gecko Party -->
 	<div class="window hidden" id="geckoparty" title="Gecko Party">
 		<div class="window-button window-close" onclick="Hide('geckoparty')">X</div>
 		Made during my 3rd year at Creajeux
-		Gecko Party is a local multiplayer party game made with Unity in 1 months with a team of 5 devs and 3 artists
+		Gecko Party is a local multiplayer party game made with Unity in 2 months with a team of 5 devs and 3 artists
 
 		<p>
 			Trailer
@@ -162,7 +163,7 @@
 	<div class="window hidden" id="stellaria" title="Stellaria">
 		<div class="window-button window-close" onclick="Hide('stellaria')">X</div>
 		Made during my 2nd year at Creajeux
-		Stellaria is a platformer sandbox game made in C++ using the SFML graphic library in 1 months with a team of 6 devs and 3 artists
+		Stellaria is a platformer sandbox game made in C++ using the SFML graphic library in 3 months with a team of 6 devs and 3 artists
 		Greatly inspired by Terraria and Starbound
 
 		<p>
