--- a/index.html
+++ b/index.html
@@ -80,15 +80,6 @@
 		</div>
 	</div>
 
- <!-- Draggable DIV -->
- <div id="mydiv">
-	<!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
-	<div id="mydivheader">Click here to move</div>
-	<p>Move</p>
-	<p>this</p>
-	<p>DIV</p>
-  </div> 
-
 	<!-- About Me -->
 	<div class="window active" id="about" style="top: 250px; left: 250px;">
 		<div class="window-header" id="aboutheader">
@@ -151,7 +142,7 @@
 
 	<!-- Education -->
 	<div class="window" id="education" title="Education">
-		<div class="window-header">
+		<div class="window-header" id="educationheader">
 			<div class="window-title">Education</div>
 			<div onclick="Hide('education')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -167,7 +158,7 @@
 
 	<!-- Contact -->
 	<div class="window" id="contact" title="Contact">
-		<div class="window-header">
+		<div class="window-header" id="contactheader">
 			<div class="window-title">Contact me</div>
 			<div onclick="Hide('contact')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -178,17 +169,26 @@
 			<p>
 				You can contact me on any of my social medias, but I mainly use those
 
-			<div class="button popout mail">
-				<img src="images/mail.png" alt="Mail" width="25" height="25" />
-				Mail
+			<div class="hover-box">
+				<a class="button popout mail"
+					target="_blank">
+					<img src="images/mail.png" alt="E-mail" width="25" height="25" />
+					E-mail
+				</a>
 			</div>
-			<div class="button popout instagram">
-				<img src="images/instagram.png" alt="Instagram" width="25" height="25" />
-				Instagram
+			<div class="hover-box">
+				<a class="button popout instagram"
+					target="_blank">
+					<img src="images/instagram.png" alt="Instagram" width="25" height="25" />
+					Instagram
+				</a>
 			</div>
-			<div class="button popout discord">
-				<img src="images/discord.png" alt="Discord" width="25" height="25" />
-				Discord
+			<div class="hover-box">
+				<a class="button popout linkedin" href="https://www.linkedin.com/in/hugo-michel-sumishi/"
+					target="_blank">
+					<img src="images/linkedin.png" alt="LinkedIn" width="25" height="25" />
+					LinkedIn
+				</a>
 			</div>
 			</p>
 		</div>
@@ -197,7 +197,7 @@
 
 	<!-- Skills -->
 	<div class="window" id="skills" title="My skills">
-		<div class="window-header">
+		<div class="window-header" id="skillsheader">
 			<div class="window-title">My skills</div>
 			<div onclick="Hide('skills')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -225,7 +225,7 @@
 
 	<!-- Game dev -->
 	<div class="window" id="gamedev" title="Game dev">
-		<div class="window-header">
+		<div class="window-header" id="gamedevheader">
 			<div class="window-title">Game dev</div>
 			<div onclick="Hide('gamedev')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -241,7 +241,7 @@
 
 	<!-- Software Engineering -->
 	<div class="window" id="software" title="Software Engineering">
-		<div class="window-header">
+		<div class="window-header" id="softwareheader">
 			<div class="window-title">Software Engineering</div>
 			<div onclick="Hide('software')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -257,7 +257,7 @@
 
 	<!-- Web design -->
 	<div class="window" id="web" title="Web design">
-		<div class="window-header">
+		<div class="window-header" id="webheader">
 			<div class="window-title">Web design</div>
 			<div onclick="Hide('web')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -273,7 +273,7 @@
 
 	<!-- Beerylis -->
 	<div class="window" id="beerylis" title="Beerylis">
-		<div class="window-header">
+		<div class="window-header" id="beerylisheader">
 			<div class="window-title">Beerylis</div>
 			<div onclick="Hide('beerylis')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -293,7 +293,7 @@
 
 	<!-- Pyrite Engine -->
 	<div class="window" id="pyrite" title="Pyrite Engine">
-		<div class="window-header">
+		<div class="window-header" id="pyriteheader">
 			<div class="window-title">Pyrite Engine</div>
 			<div onclick="Hide('pyrite')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -311,7 +311,7 @@
 
 	<!-- Snake.py -->
 	<div class="window" id="snake" title="Snake.py">
-		<div class="window-header">
+		<div class="window-header" id="snakeheader">
 			<div class="window-title">Snake.py</div>
 			<div onclick="Hide('snake')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -325,13 +325,16 @@
 				A classic snake game made for a class project in 2 weeks
 			</p>
 			<!-- itch io link -->
-			<div><a href="https://sumishi.itch.io/snakepy" target="_blank">Itch.io</a></div>
+			<a class="button popout itchio" href="https://sumishi.itch.io/snakepy" target="_blank">
+				<img src="images/itch.io.png" alt="Itch.io" width="25" height="25" />
+				Itch.io
+			</a>
 		</div>
 	</div>
 
 	<!-- Gecko Party -->
 	<div class="window" id="geckoparty" title="Gecko Party">
-		<div class="window-header">
+		<div class="window-header" id="geckopartyheader">
 			<div class="window-title">Gecko Party</div>
 			<div onclick="Hide('geckoparty')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -352,7 +355,7 @@
 
 	<!-- Stellaria -->
 	<div class="window" id="stellaria" title="Stellaria">
-		<div class="window-header">
+		<div class="window-header" id="stellariaheader">
 			<div class="window-title">Stellaria</div>
 			<div onclick="Hide('stellaria')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -377,7 +380,7 @@
 
 	<!-- Hydre'O'Miel -->
 	<div class="window" id="hydreomiel" title="Hydre'O'Miel">
-		<div class="window-header">
+		<div class="window-header" id="hydreomielheader">
 			<div class="window-title">Hydre'O'Miel</div>
 			<div onclick="Hide('hydreomiel')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -396,8 +399,8 @@
 
 	<!-- Daisy's Quest -->
 	<div class="window" id="daisysquest" title="Daisy's Quest">
-		<div class="window-header">
-			<div class="window-title">Education</div>
+		<div class="window-header" id="daisysquestheader">
+			<div class="window-title">Daisy's Quest</div>
 			<div onclick="Hide('daisysquest')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
 			</div>
@@ -413,7 +416,7 @@
 
 	<!-- Defend The Kingdom -->
 	<div class="window" id="defendthekingdom" title="Defend The Kingdom">
-		<div class="window-header">
+		<div class="window-header" id="defendthekingdomheader">
 			<div class="window-title">Defend The Kingdom</div>
 			<div onclick="Hide('defendthekingdom')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -429,7 +432,7 @@
 
 	<!-- Le disciple d'Ishikori-Dome -->
 	<div class="window" id="ishikoridome" title="Le disciple d'Ishikori-Dome">
-		<div class="window-header">
+		<div class="window-header" id="ishikoridomeheader">
 			<div class="window-title">Le disciple d'Ishikori-Dome</div>
 			<div onclick="Hide('ishikoridome')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
@@ -474,49 +477,64 @@
 
 	<script>
 		// Make the DIV element draggable:
-dragElement(document.getElementById("mydiv"));
-dragElement(document.getElementById("about"));
+		dragElement(document.getElementById("about"));
+		dragElement(document.getElementById("socials"));
+		dragElement(document.getElementById("education"));
+		dragElement(document.getElementById("contact"));
+		dragElement(document.getElementById("skills"));
+		dragElement(document.getElementById("gamedev"));
+		dragElement(document.getElementById("software"));
+		dragElement(document.getElementById("web"));
+		dragElement(document.getElementById("beerylis"));
+		dragElement(document.getElementById("pyrite"));
+		dragElement(document.getElementById("snake"));
+		dragElement(document.getElementById("geckoparty"));
+		dragElement(document.getElementById("stellaria"));
+		dragElement(document.getElementById("hydreomiel"));
+		dragElement(document.getElementById("daisysquest"));
+		dragElement(document.getElementById("defendthekingdom"));
+		dragElement(document.getElementById("ishikoridome"));
 
-function dragElement(elmnt) {
-  var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
-  if (document.getElementById(elmnt.id + "header")) {
-    // if present, the header is where you move the DIV from:
-    document.getElementById(elmnt.id + "header").onmousedown = dragMouseDown;
-  } else {
-    // otherwise, move the DIV from anywhere inside the DIV:
-    elmnt.onmousedown = dragMouseDown;
-  }
+		function dragElement(elmnt) {
+			var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
+			if (document.getElementById(elmnt.id + "header")) {
+				// if present, the header is where you move the DIV from:
+				document.getElementById(elmnt.id + "header").onmousedown = dragMouseDown;
+			} else {
+				// otherwise, move the DIV from anywhere inside the DIV:
+				elmnt.onmousedown = dragMouseDown;
+			}
 
-  function dragMouseDown(e) {
-    e = e || window.event;
-    e.preventDefault();
-    // get the mouse cursor position at startup:
-    pos3 = e.clientX;
-    pos4 = e.clientY;
-    document.onmouseup = closeDragElement;
-    // call a function whenever the cursor moves:
-    document.onmousemove = elementDrag;
-  }
+			function dragMouseDown(e) {
+				e = e || window.event;
+				e.preventDefault();
+				// get the mouse cursor position at startup:
+				pos3 = e.clientX;
+				pos4 = e.clientY;
+				document.onmouseup = closeDragElement;
+				// call a function whenever the cursor moves:
+				document.onmousemove = elementDrag;
+			}
 
-  function elementDrag(e) {
-    e = e || window.event;
-    e.preventDefault();
-    // calculate the new cursor position:
-    pos1 = pos3 - e.clientX;
-    pos2 = pos4 - e.clientY;
-    pos3 = e.clientX;
-    pos4 = e.clientY;
-    // set the element's new position:
-    elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
-    elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
-  }
+			function elementDrag(e) {
+				e = e || window.event;
+				e.preventDefault();
+				// calculate the new cursor position:
+				pos1 = pos3 - e.clientX;
+				pos2 = pos4 - e.clientY;
+				pos3 = e.clientX;
+				pos4 = e.clientY;
+				// set the element's new position:
+				elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
+				elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
+			}
 
-  function closeDragElement() {
-    // stop moving when mouse button is released:
-    document.onmouseup = null;
-    document.onmousemove = null;
-  }
-}
+			function closeDragElement() {
+				// stop moving when mouse button is released:
+				document.onmouseup = null;
+				document.onmousemove = null;
+			}
+		}
 	</script>
 
 </main>
