remove refs on buttons

--- a/index.html
+++ b/index.html
@@ -13,68 +13,68 @@
 		<div class="accordion-item">
 			About me
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#about" onclick="Show('about')">Me</a>
+				<a class="button popout" onclick="Show('about')">Me</a>
 			</div>
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#socials" onclick="Show('socials')">Socials</a>
+				<a class="button popout" onclick="Show('socials')">Socials</a>
 			</div>
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#education" onclick="Show('education')">Education</a>
+				<a class="button popout" onclick="Show('education')">Education</a>
 			</div>
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#contact" onclick="Show('contact')">Contact</a>
+				<a class="button popout" onclick="Show('contact')">Contact</a>
 			</div>
 		</div>
 
 		<div class="accordion-item">
 			Programming
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#skills" onclick="Show('skills')">My skills</a>
+				<a class="button popout" onclick="Show('skills')">My skills</a>
 			</div>
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#gamedev" onclick="Show('gamedev')">Game dev</a>
+				<a class="button popout" onclick="Show('gamedev')">Game dev</a>
 			</div>
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#software" onclick="Show('software')">Software Engineering</a>
+				<a class="button popout" onclick="Show('software')">Software Engineering</a>
 			</div>
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#web" onclick="Show('web')">Web design</a>
+				<a class="button popout" onclick="Show('web')">Web design</a>
 			</div>
 		</div>
 
 		<div class="accordion-item">
 			My projects
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#beerylis" onclick="Show('beerylis')">Beerylis</a>
+				<a class="button popout" onclick="Show('beerylis')">Beerylis</a>
 			</div>
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#pyrite" onclick="Show('pyrite')">Pyrite Engine</a>
+				<a class="button popout" onclick="Show('pyrite')">Pyrite Engine</a>
 			</div>
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#snakepy" onclick="Show('snake')">Snake.py</a>
+				<a class="button popout" onclick="Show('snake')">Snake.py</a>
 			</div>
 		</div>
 
 		<div class="accordion-item">
 			Projects I've worked on
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#geckoparty" onclick="Show('geckoparty')">Gecko Party</a>
+				<a class="button popout" onclick="Show('geckoparty')">Gecko Party</a>
 			</div>
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#stellaria" onclick="Show('stellaria')">Stellaria</a>
+				<a class="button popout" onclick="Show('stellaria')">Stellaria</a>
 			</div>
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#hydreomiel" onclick="Show('hydreomiel')">Hydre'O'Miel</a>
+				<a class="button popout" onclick="Show('hydreomiel')">Hydre'O'Miel</a>
 			</div>
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#daisysquest" onclick="Show('daisysquest')">Daisy's Quest</a>
+				<a class="button popout" onclick="Show('daisysquest')">Daisy's Quest</a>
 			</div>
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#defendthekingdom" onclick="Show('defendthekingdom')">Defend The
+				<a class="button popout" onclick="Show('defendthekingdom')">Defend The
 					Kingdom</a>
 			</div>
 			<div class="hover-box accordion-content">
-				<a class="button popout" href="#ishikoridome" onclick="Show('ishikoridome')">Le disciple
+				<a class="button popout" onclick="Show('ishikoridome')">Le disciple
 					d'Ishikori-Dome</a>
 			</div>
 		</div>
