--- a/index.html
+++ b/index.html
@@ -106,33 +106,33 @@
 		</div>
 
 		<div class="window-content socials">
-			<div class="hover-box">
+			<div class="hover-box" title="GitHub">
 				<a class="button popout icon github" href="https://github.com/SumishiM" target="_blank">
 					<img src="images/github.png" alt="GitHub" width="25" height="25" />
 				</a>
 			</div>
-			<div class="hover-box">
+			<div class="hover-box" title="Itch.io">
 				<a class="button popout icon itchio" href="https://sumishi.itch.io/" target="_blank">
 					<img src="images/itch.io.png" alt="Itch.io" width="25" height="25" />
 				</a>
 			</div>
-			<div class="hover-box">
+			<div class="hover-box" title="LinkedIn">
 				<a class="button popout icon linkedin" href="https://www.linkedin.com/in/hugo-michel-sumishi/"
 					target="_blank">
 					<img src="images/linkedin.png" alt="LinkedIn" width="25" height="25" />
 				</a>
 			</div>
-			<div class="hover-box">
+			<div class="hover-box" title="Instagram">
 				<a class="button popout icon instagram" target="_blank">
 					<img src="images/instagram.png" alt="Instagram" width="25" height="25" />
 				</a>
 			</div>
-			<div class="hover-box">
+			<div class="hover-box" title="Twitter">
 				<a class="button popout icon twitter" target="_blank">
 					<img src="images/twitter.png" alt="Twitter" width="25" height="25" />
 				</a>
 			</div>
-			<div class="hover-box">
+			<div class="hover-box" title="Discord">
 				<a class="button popout icon discord" target="_blank">
 					<img src="images/discord.png" alt="Discord" width="25" height="25" />
 				</a>
@@ -170,15 +170,13 @@
 				You can contact me on any of my social medias, but I mainly use those
 
 			<div class="hover-box">
-				<a class="button popout mail"
-					target="_blank">
+				<a class="button popout mail" target="_blank">
 					<img src="images/mail.png" alt="E-mail" width="25" height="25" />
 					E-mail
 				</a>
 			</div>
 			<div class="hover-box">
-				<a class="button popout instagram"
-					target="_blank">
+				<a class="button popout instagram" target="_blank">
 					<img src="images/instagram.png" alt="Instagram" width="25" height="25" />
 					Instagram
 				</a>
@@ -281,13 +279,35 @@
 		</div>
 
 		<div class="window-content beerylis">
-			WIP - Made for my 4th year thesis project
-			Made in C#, HTML, CSS with .NET MAUI and ASP.NET Blazor
-			<p>
-				Beerylis is a beekeeping management software originally made for my father
-			</p>
+			<div><strong>Work in progress ...</strong></div>
+			<div>
+				Beerylis is a beekeeping management software originally made for my father.
+				Then I realized it would be a usefull tool for other beekeepers and started working on it to make the
+				best software I can.
+			</div>
+			<div>
+				It's currently my 4th year thesis project for Creajeux.
+				The software is made in C#, HTML, CSS with the frameworks <strong>.NET MAUI</strong> and <strong>ASP.NET
+					Blazor</strong>.
+			</div>
+			<div>
+				Here are the links to the project and my father website.
+			</div>
 			<!-- Beerylis website link -->
+			<div class="hover-box" title="WIP - Beerylis">
+				<a class="button popout beerylis" target="_blank">
+					<!-- <img src="images/beerylis.png" alt="Beerylis" width="25" height="25" /> -->
+					WIP - Beerylis
+				</a>
+			</div>
+
 			<!-- Le Rucher des escaunes website link -->
+			<div class="hover-box" title="Le Rucher des Escaunes">
+				<a class="button popout escaunes" href="https://www.rucher-escaunes.fr/" target="_blank">
+					<!-- <img src="images/escaunes.png" alt="Escaunes" width="25" height="25" /> -->
+					Le Rucher des Escaunes
+				</a>
+			</div>
 		</div>
 	</div>
 
@@ -301,11 +321,18 @@
 		</div>
 
 		<div class="window-content pyrite">
-			<p>
-				WIP - Made on my free time
-				Made in C++
-				<!-- Github link -->
-			</p>
+			<div><strong>Work in progress ...</strong></div>
+			<div>
+				Pyrite is a <strong>C++ game engine</strong> I'm making on my free time.
+			</div>
+			<div>Here is the GitHub repository if you are interested in it.</div>
+
+			<div class="hover-box" title="Pyrite repository">
+				<a class="button popout github" href="https://github.com/SumishiM/Pyrite" target="_blank">
+					<img src="images/github.png" alt="Github" width="25" height="25" />
+					GitHub
+				</a>
+			</div>
 		</div>
 	</div>
 
@@ -319,16 +346,20 @@
 		</div>
 
 		<div class="window-content snake">
-			Made during my 1st year at Creajeux
-			Made in Lua with LOVE 2D
-			<p>
-				A classic snake game made for a class project in 2 weeks
-			</p>
+			<div>
+				This is a Snake game remake for a <strong>class project</strong> I made during my first year at Creajeux.
+				I made this game in 2 weeks in <strong>Lua</strong> using the framework <strong>LOVE 2D</strong>.
+			</div>
+			<div>
+				If you want to give it a try, here is the Itch.io :D
+			</div>
 			<!-- itch io link -->
-			<a class="button popout itchio" href="https://sumishi.itch.io/snakepy" target="_blank">
-				<img src="images/itch.io.png" alt="Itch.io" width="25" height="25" />
-				Itch.io
-			</a>
+			<div class="hover-box" title="Snake.py Itch.io">
+				<a class="button popout itchio" href="https://sumishi.itch.io/snakepy" target="_blank">
+					<img src="images/itch.io.png" alt="Itch.io" width="25" height="25" />
+					Itch.io
+				</a>
+			</div>
 		</div>
 	</div>
 
