set windows default positions

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	</div>
 
 	<!-- About Me -->
-	<div class="window active" id="about" style="top: 250px; left: 250px;">
+	<div class="window active" id="about" style="top: 200px; left: 450px;">
 		<div class="window-header" id="aboutheader">
 			<div class="window-title">About Me</div>
 			<div onclick="Hide('about')">
@@ -97,7 +97,7 @@
 	</div>
 
 	<!-- Socials -->
-	<div class="window active" id="socials" title="Social Media" style="top: 50px; left: 50px;">
+	<div class="window active" id="socials" title="Social Media" style="top: 500px; left: 1100px;">
 		<div class="window-header draggable" id="socialsheader">
 			<div class="window-title">Socials</div>
 			<div onclick="Hide('socials')">
@@ -141,7 +141,7 @@
 	</div>
 
 	<!-- Education -->
-	<div class="window" id="education" title="Education">
+	<div class="window" id="education" title="Education" style="top: 760px; left: 770px;">
 		<div class="window-header" id="educationheader">
 			<div class="window-title">Education</div>
 			<div onclick="Hide('education')">
@@ -157,7 +157,7 @@
 	</div>
 
 	<!-- Contact -->
-	<div class="window" id="contact" title="Contact">
+	<div class="window" id="contact" title="Contact" style="top: 130px; left: 1120px; max-width: 300px">
 		<div class="window-header" id="contactheader">
 			<div class="window-title">Contact me</div>
 			<div onclick="Hide('contact')">
@@ -194,7 +194,7 @@
 	</div>
 
 	<!-- Skills -->
-	<div class="window" id="skills" title="My skills">
+	<div class="window" id="skills" title="My skills" style="top: 200px; left: 250px;">
 		<div class="window-header" id="skillsheader">
 			<div class="window-title">My skills</div>
 			<div onclick="Hide('skills')">
@@ -222,7 +222,7 @@
 	</div>
 
 	<!-- Game dev -->
-	<div class="window" id="gamedev" title="Game dev">
+	<div class="window" id="gamedev" title="Game dev" style="top: 280px; left: 780px;">
 		<div class="window-header" id="gamedevheader">
 			<div class="window-title">Game dev</div>
 			<div onclick="Hide('gamedev')">
@@ -238,7 +238,7 @@
 	</div>
 
 	<!-- Software Engineering -->
-	<div class="window" id="software" title="Software Engineering">
+	<div class="window" id="software" title="Software Engineering" style="top: 540px; left: 120px;">
 		<div class="window-header" id="softwareheader">
 			<div class="window-title">Software Engineering</div>
 			<div onclick="Hide('software')">
@@ -254,7 +254,7 @@
 	</div>
 
 	<!-- Web design -->
-	<div class="window" id="web" title="Web design">
+	<div class="window" id="web" title="Web design" style="top: 550px; left: 875px;">
 		<div class="window-header" id="webheader">
 			<div class="window-title">Web design</div>
 			<div onclick="Hide('web')">
@@ -270,7 +270,7 @@
 	</div>
 
 	<!-- Beerylis -->
-	<div class="window" id="beerylis" title="Beerylis">
+	<div class="window" id="beerylis" title="Beerylis" style="top: 270px; left: 160px;">
 		<div class="window-header" id="beerylisheader">
 			<div class="window-title">Beerylis</div>
 			<div onclick="Hide('beerylis')">
@@ -287,7 +287,8 @@
 			</div>
 			<div>
 				It's currently my 4th year thesis project for Creajeux.
-				The software is made in C#, HTML, CSS with the frameworks <strong>.NET MAUI</strong> and <strong>ASP.NET
+				The software is made in <strong>C# HTML and CSS</strong> with the frameworks <strong>.NET MAUI</strong>
+				and <strong>ASP.NET
 					Blazor</strong>.
 			</div>
 			<div>
@@ -312,7 +313,7 @@
 	</div>
 
 	<!-- Pyrite Engine -->
-	<div class="window" id="pyrite" title="Pyrite Engine">
+	<div class="window" id="pyrite" title="Pyrite Engine" style="top: 360px; left: 725px;">
 		<div class="window-header" id="pyriteheader">
 			<div class="window-title">Pyrite Engine</div>
 			<div onclick="Hide('pyrite')">
@@ -337,7 +338,7 @@
 	</div>
 
 	<!-- Snake.py -->
-	<div class="window" id="snake" title="Snake.py">
+	<div class="window" id="snake" title="Snake.py" style="top: 665px; left: 435px;">
 		<div class="window-header" id="snakeheader">
 			<div class="window-title">Snake.py</div>
 			<div onclick="Hide('snake')">
@@ -347,7 +348,8 @@
 
 		<div class="window-content snake">
 			<div>
-				This is a Snake game remake for a <strong>class project</strong> I made during my first year at Creajeux.
+				This is a Snake game remake for a <strong>class project</strong> I made during my first year at
+				Creajeux.
 				I made this game in 2 weeks in <strong>Lua</strong> using the framework <strong>LOVE 2D</strong>.
 			</div>
 			<div>
@@ -364,7 +366,8 @@
 	</div>
 
 	<!-- Gecko Party -->
-	<div class="window" id="geckoparty" title="Gecko Party">
+	<div class="window" id="geckoparty" title="Gecko Party"
+	style="top: 370px; left: 830px;">
 		<div class="window-header" id="geckopartyheader">
 			<div class="window-title">Gecko Party</div>
 			<div onclick="Hide('geckoparty')">
@@ -385,7 +388,8 @@
 	</div>
 
 	<!-- Stellaria -->
-	<div class="window" id="stellaria" title="Stellaria">
+	<div class="window" id="stellaria" title="Stellaria"
+	style="top: 180px; left: 190px;">
 		<div class="window-header" id="stellariaheader">
 			<div class="window-title">Stellaria</div>
 			<div onclick="Hide('stellaria')">
@@ -410,7 +414,8 @@
 	</div>
 
 	<!-- Hydre'O'Miel -->
-	<div class="window" id="hydreomiel" title="Hydre'O'Miel">
+	<div class="window" id="hydreomiel" title="Hydre'O'Miel"
+	style="top: 400px; left: 900px;">
 		<div class="window-header" id="hydreomielheader">
 			<div class="window-title">Hydre'O'Miel</div>
 			<div onclick="Hide('hydreomiel')">
@@ -429,7 +434,8 @@
 	</div>
 
 	<!-- Daisy's Quest -->
-	<div class="window" id="daisysquest" title="Daisy's Quest">
+	<div class="window" id="daisysquest" title="Daisy's Quest"
+	style="top: 300px; left: 120px;">
 		<div class="window-header" id="daisysquestheader">
 			<div class="window-title">Daisy's Quest</div>
 			<div onclick="Hide('daisysquest')">
@@ -446,7 +452,8 @@
 	</div>
 
 	<!-- Defend The Kingdom -->
-	<div class="window" id="defendthekingdom" title="Defend The Kingdom">
+	<div class="window" id="defendthekingdom" title="Defend The Kingdom"
+	style="top: 175px; left: 875px;">
 		<div class="window-header" id="defendthekingdomheader">
 			<div class="window-title">Defend The Kingdom</div>
 			<div onclick="Hide('defendthekingdom')">
@@ -462,7 +469,8 @@
 	</div>
 
 	<!-- Le disciple d'Ishikori-Dome -->
-	<div class="window" id="ishikoridome" title="Le disciple d'Ishikori-Dome">
+	<div class="window" id="ishikoridome" title="Le disciple d'Ishikori-Dome"
+	style="top: 450px; left: 120px;">
 		<div class="window-header" id="ishikoridomeheader">
 			<div class="window-title">Le disciple d'Ishikori-Dome</div>
 			<div onclick="Hide('ishikoridome')">
