--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 			<!-- Beerylis website link -->
 			<div class="hover-box" title="WIP - Beerylis">
 				<a class="button popout beerylis" target="_blank">
-					<!-- <img src="images/beerylis.png" alt="Beerylis" width="25" height="25" /> -->
+					<img src="images/beerylis.png" alt="Beerylis" width="25" height="25" />
 					WIP - Beerylis
 				</a>
 			</div>
